@@ -11,7 +11,7 @@ use Cwd;
 
 my $project_root_dir  = $ENV{'OUTTHENTIC_ROOT'} || getcwd();
 my $purge_cache   = 0;
-my $silent_mod    = 0;
+my $format        = 'default';
 my $debug_mod     = 0;
 my $dump_config   = 0;
 my $nocolor       = 0;
@@ -26,7 +26,7 @@ my @runtime_params;
 
 GetOptions (
 
-        "silent"        => \$silent_mod,        # boolean
+        "format=s"      => \$format,            # string
         "purge-cache"   => \$purge_cache,       # boolean
         "nocolor"       => \$nocolor,           # boolean
         "debug=i"       => \$debug_mod,         # numeric
@@ -106,11 +106,8 @@ sub wanted {
         print F "set_prop( story_dir => q{$File::Find::dir} );\n";
         print F "set_prop( story_check_file => q{$File::Find::dir/story.check} );\n";
         print F "set_prop( story_type => q{$story_type} );\n";
-        if ($silent_mod){
-          print F "set_prop( verbose => 0 );\n";
-        }else{
-          print F "set_prop( verbose => 1 );\n";
-        }
+        print F "set_prop( format => q{$format} );\n";
+
         print F "set_prop( debug => $debug_mod );\n";
         print F "set_prop( nocolor => $nocolor );\n";
         print F "set_prop( match_l => $match_l );\n";
